# vgi-fixedformat

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  docker-publish.yml
crates/fixedformat-core/: Cargo.toml
crates/fixedformat-core/src/: compression.rs  copybook.rs  datetime.rs  decode.rs  describe.rs  ebcdic.rs  edited.rs  encode.rs  framing.rs  jsonspec.rs  layout.rs  lib.rs  multirecord.rs  packed.rs  stream.rs  template.rs  value.rs  zoned.rs  zstd_codec.rs
crates/fixedformat-wasm/: Cargo.toml
crates/fixedformat-wasm/src/: lib.rs
crates/fixedformat-worker/: Cargo.toml
crates/fixedformat-worker/src/: arrow_map.rs  cloud.rs  copy_from.rs  copy_to.rs  lib.rs  main.rs  meta.rs  options.rs  reader.rs  record_writer.rs  value_in.rs
crates/fixedformat-worker/src/buffering/: write_fixed.rs  write_multi.rs
crates/fixedformat-worker/src/scalar/: mod.rs  pack.rs  unpack.rs  unpack_multi.rs  version.rs
crates/fixedformat-worker/src/table/: describe_fixed.rs  describe_multi.rs  mod.rs  read_fixed.rs  read_multi.rs
crates/fixedformat-worker/src/wasm/: crypto.rs  http.rs  mod.rs
data/: accounts.dat.zst  generate_fixtures.py
test/sql/: basic.test  codes.test  copy_from.test  copy_to.test  datetime.test  describe_multi.test  edited.test  files.test  multirecord.test
wasm/: README.md  build.sh  vgi_http_lib.js
