[workspace]
resolver = "2"
members = [
    "crates/fixedformat-core",
    "crates/fixedformat-worker",
    "crates/fixedformat-wasm",
]
# fixedformat-wasm only makes sense for wasm32-unknown-emscripten (it is a
# staticlib whose ring ops are supplied by emcc's --js-library), so keep it out
# of the default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p fixedformat-wasm`.
default-members = ["crates/fixedformat-core", "crates/fixedformat-worker"]

[workspace.package]
version = "0.9.3"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-fixedformat"

[workspace.dependencies]
# VGI Rust SDK (worker side). 0.24 provides the wasm `vgi::wasm_worker!` macro
# used by fixedformat-wasm; requires rustc 1.97 (see rust-version above).
# Base (feature-less) so each target can opt in: the native build takes the
# SDK's real defaults (`sqlite` + `transport-http`), while the wasm build must
# NOT — tokio/mio/axum and bundled SQLite do not compile for wasm32, and the
# browser transport serves over a byte channel rather than HTTP. Features are
# additive, and the two are behind mutually-exclusive target cfgs.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow = { version = "59", default-features = false, features = ["ipc"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-data = "59"
arrow-schema = "59"
arrow-select = "59"
arrow-cast = "59"

fixedformat-core = { path = "crates/fixedformat-core" }

[profile.release]
opt-level = 2
strip = true
