[package]
name = "fixedformat-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-compute fixed-width / Perl-unpack / COBOL-copybook codecs for the fixedformat VGI worker (no Arrow/VGI deps)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# DATE / TIME / TIMESTAMP display-field parsing & formatting via strftime
# patterns. Pure compute (no I/O), so it belongs in core with the other codecs.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# Transparent input decompression (gzip / zstd). Pure bytes-in/bytes-out, so it
# lives in core with the other codecs. zstd 0.13 matches the version already in
# the tree via vgi-rpc.
flate2 = "1"

# zstd backends differ by target (see src/zstd_codec.rs): the C-backed `zstd`
# crate natively, pure-Rust `ruzstd` on wasm32 (no C toolchain for that target).
# Both read/write the standard frame format, so output is interchangeable.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd = "0.8"

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code = "forbid"
